--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,16 @@
 @import url(./blocks/popup/__container/popup__container.css);
 @import url(./blocks/popup/__close-button/popup__close-button.css);
 @import url(./blocks/form/form.css);
+@import url(./blocks/form/__image/form__image.css);
+@import url(./blocks/form/__status/form__status.css);
+@import url(./blocks/form/_type/form_type_login.css);
+@import url(./blocks/form/_type/form_type_register.css);
 @import url(./blocks/form-image/form-image.css);
 @import url(./blocks/form-image/__text/form-image__text.css);
 @import url(./blocks/form-image/__image/form-image__image.css);
+@import url(./blocks/form/__link/form__link.css);
 @import url(./blocks/form/__title/form__title.css);
+@import url(./blocks/form/__title/_type/form__title_type_login.css);
 @import url(./blocks/form/__input/form__input.css);
 @import url(./blocks/form/__input/_type/form__input_type_title.css);
 @import url(./blocks/form/__input/_type/form__input_type_name.css);
@@ -22,15 +28,20 @@
 @import url(./blocks/form/__input/_type/form__input_type_link.css);
 @import url(./blocks/form/__input/_type/form__input_type_error.css);
 @import url(./blocks/form/__input/_type/form__input_type_avatar.css);
+@import url(./blocks/form/__input/_type/form__input_type_login.css);
+@import url(./blocks/form/__input/_type/form__input_type_password.css);
 @import url(./blocks/form/__input-error/form__input-error.css);
 @import url(./blocks/form/__input-error/_type/form__input-error_type_active.css);
 @import url(./blocks/form/__save-button/form__save-button.css);
+@import url(./blocks/form/__save-button/_type/form_save-button_type_login.css);
+@import url(./blocks/form/__save-button/_type/form__save-button_type_register.css);
 @import url(./blocks/form/__save-button/_inactive/form__save-button_inactive.css);
 @import url(./blocks/form/__save-button/_hidden/form_save-button_hidden.css);
 @import url(./blocks/form/__loading/form__loading.css);
 @import url(./blocks/form/__loading/_visible/form__loading_visible.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/main/main.css);
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile-avatar/profile-avatar.css);
