--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,8 @@
     display: flex;
     margin: 0;
     border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+    align-content: center;
+    justify-content: space-between;
 }
 
 @media screen and (min-width: 1024px) {
